.body.survey-page url geändert für leichteren Zugang

--- a/assets/styles_survey.css
+++ b/assets/styles_survey.css
@@ -1,12 +1,10 @@
 body.survey-page {
   min-height: 100vh;
   margin: 0;
-  background-image: 
-    url("Hintergrundbild.png"),
-    linear-gradient(to bottom, rgba(0,0,0,0) 0%, #001f3f 100%);
+  background-image: url("./Hintergrundbild.png"), linear-gradient(to bottom, rgba(0,0,0,0) 0%, #001f3f 100%);
   background-repeat: no-repeat;
-  background-size: 200%, 100%;
-  background-position: top center, center;
+  background-size: cover, 100%;
+  background-position: center, center;
 }
 
 
